--- a/package.json
+++ b/package.json
@@ -24,31 +24,34 @@
     "@ffmpeg/core": "^0.8.5",
     "@ffmpeg/ffmpeg": "^0.9.7",
     "bcrypt": "^5.0.1",
+    "chokidar": "^3.5.3",
     "connect-mongo": "^4.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
+    "fsevents": "^2.3.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": ">=6.4.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.7",
+    "nvm": "^0.0.4",
+    "pm2": "^5.3.0",
     "pug": "^3.0.2",
     "regenerator-runtime": "^0.13.7",
-    "jsonwebtoken": "^9.0.0",
-    "pm2": "^5.2.2",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
-    "@babel/node": "^7.13.10",
+    "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.13.10",
-    "babel-loader": "^8.2.2",
-    "nodemon": "^2.0.7",
+    "babel-loader": "^7.1.5",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^1.14.9",
     "prettier": "2.7.1"
   }
 }
